
	* lib/apache.cygclass: Accomodate usage for libapreq2.
	(apache_apxs_compile, apxs_compile): New wrapper for 'apxs -c'.
	(doapachemod): Smarter detection of module extension.
	Do not override src_compile and src_install.

	* bin/make_desktop_entry: Application is not a valid Category.

	* Relicensed under GPL-3.

	* lib/pygtk.cygclass: Add gtop2 from gnome-python-desktop.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.6 ***

	* bin/cygport.in (cygautoreconf): Sanity check.
	(__prep_libtool_modules): Break off from __prepstrip.
	(__pkg_diff): Ignore config.rpath if not building gettext.

	* lib/php.cygclass: Adapt for fixed PHP build system.

	* bin/prep_libtool_modules.sh:
	Check that library was properly installed.
	Simplify code and add comments.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/php.cygclass: New cygclass for PHP PECL extensions.

	* lib/gtk2-perl.cygclass:
	Recognize CPAN_AUTHOR for modules not on sf.net (Gtk2-Notify, Goo-Canvas).
	Set correct ldflags for Goo-Canvas.

	* bin/newmenu: Fix installation directory.

	* CYGWIN-PATCHES/README:
	* lib/Makefile.am:
	* lib/R.cygclass: New cygclass for CRAN packages.

	* bin/doman: Accept --lang=xx (-l xx) to install NLS manpages.

	* data/mirrors (mirror_cran): Added.

	* bin/prep_gconf_schemas.sh: Get GCONF_CONFIG_SOURCE from gconftool-2.

	* lib/xorg.cygclass: pixman is in lib/.

	* bin/*, lib/*: Fix whitepsace.  for a in $@ -> for a.

	* data/cygport.nanorc: Highlight trailing whitespace (from c.nanorc).

	* lib/utils.cygport (check_header, check_lib):
	More robust; searches gcc dirs; additional dirs added with -I and -L.

	* bin/cygport.in (cygcmake): Fixed typo.

	* CYGWIN-PATCHES/README:
	* bin/Makefile.am:
	* bin/newsbin:  Added newsbin().

	* bin/cygport.in (__pkg_diff):
	Accept RESTRICT=diff to skip .src.patch creation.

	* lib/gst-plugins0.10.cygclass: Update for good .6 and bad .5.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.
