@@ -19,7 +19,7 @@
 # You should have received a copy of the GNU General Public License
 # along with cygport.  If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: cygport.in,v 1.87 2007-10-15 03:40:12 yselkowitz Exp $
+# $Id: cygport.in,v 1.88 2007-11-04 18:12:39 yselkowitz Exp $
 #
 ################################################################################
 
@@ -1505,18 +1505,27 @@ __list_files() {
 }
 
 __list_deps() {
-	(cd ${D}
+	(local d
+
+	cd ${D}
 	# This prevents a package from listing itself as a dependency if
 	# already installed
 	#
 	# DEPS_PATH is meant for packages with link deps outside of std PATH,
 	# e.g. gtk2-perl, ruby-gnome2, ogle
-	export PATH="${D}/usr/bin:${DEPS_PATH}:${os_path}";
+	unset PATH
+
+	for d in ${DEPS_PATH//:/ }
+	do
+		PATH+="${D}${d}:${d}:"
+	done
+
+	export PATH+="${D}/usr/bin:${os_path}";
 
 	# Ruby and Apache2 modules should be *.so, nothing else!!!
 	find . \( -name '*.exe' -o -name '*.dll' -o -name '*.so' \) \
 		-exec objdump -p '{}' + | grep "DLL Name:" | sort -u | \
-		cut -d ' ' -f 3 | sed -e '/KERNEL32.dll/d' -e 's!mscoree.dll!mono.exe!' | \
+		cut -d ' ' -f 3 | sed -e '/ [A-Z]*32.[Dd][Ll][Ll]/d' -e 's!mscoree.dll!mono.exe!' | \
 		xargs -r which | xargs -r cygcheck -f | sort -u | sed 's!^!  !';
 	)
 }
